@@ -67,6 +67,11 @@
             
             <h2><a name="News"></a>News</h2>
 
+            <p><i><b>December 21st, 2023: SDCC 4.4.0 RC1 released.</b></i></p>
+            <p>SDCC 4.4.0 Release Candidate 1 source, doc and binary packages for amd64 GNU/Linux, amd64 Windows and amd64 macOS are available in corresponding folders at:
+              <a href="http://sourceforge.net/projects/sdcc/files/">
+              http://sourceforge.net/projects/sdcc/files/</a>.</p>
+
             <p><i><b>Jun 7th, 2023: SDCC 4.3.0 released.</b></i></p>
             <p>A new release of SDCC, the portable optimizing compiler for STM8, MCS-51, DS390, HC08, S08, Z80, Z180, Rabbit, SM83, eZ80 in Z80 mode, Z80N, TLCS-90, MOS 6502, Padauk and PIC microprocessors is now available.
               (<a href="http://sdcc.sourceforge.net" target="_new">http://sdcc.sourceforge.net</a>).
@@ -96,7 +101,7 @@
               <li>makeshift support for long double as another alias for float.</li>
             </ul>
 
-            <p><i><b>Junb 26th, 2023: SDCC 4.3.0 RC1 released.</b></i></p>
+            <p><i><b>June 26th, 2023: SDCC 4.3.0 RC1 released.</b></i></p>
             <p>SDCC 4.3.0 Release Candidate 1 source, doc and binary packages for amd64 GNU/Linux, 32 and 64 bit Windows and amd64 macOS are available in corresponding folders at:
               <a href="http://sourceforge.net/projects/sdcc/files/">
               http://sourceforge.net/projects/sdcc/files/</a>.</p>
